--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "pinia": "^2.1.7",
     "primeicons": "^6.0.1",
     "vue": "^3.3.4",
