--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "pinia": "^2.1.7",
     "primeicons": "^6.0.1",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.5",
-    "vue3-carousel": "^0.3.1"
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
