--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.6.2",
     "pinia": "^2.1.7",
     "primeicons": "^6.0.1",
+    "resend": "^6.6.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
